--- a/package.json
+++ b/package.json
@@ -1,36 +1,41 @@
 {
-  "name": "rankmyramen-server",
-  "version": "1.0.0",
-  "description": "Backend- or API- (server) facing portion of RankMyRamen",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "pushGit": "git checkout master && git merge dev && git push origin master && git checkout dev"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Haz-git/rankmyramen-server.git"
-  },
-  "author": "Harry Zhou",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Haz-git/rankmyramen-server/issues"
-  },
-  "homepage": "https://github.com/Haz-git/rankmyramen-server#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "pg": "^8.6.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.2"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.1"
-  }
+    "name": "rankmyramen-server",
+    "version": "1.0.0",
+    "description": "Backend- or API- (server) facing portion of RankMyRamen",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "pushGit": "git checkout master && git merge dev && git push origin master && git checkout dev",
+        "build": "tsc --project ./"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Haz-git/rankmyramen-server.git"
+    },
+    "author": "Harry Zhou",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Haz-git/rankmyramen-server/issues"
+    },
+    "homepage": "https://github.com/Haz-git/rankmyramen-server#readme",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "pg": "^8.6.0",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.6.2"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.12",
+        "@types/node": "^15.12.4",
+        "@typescript-eslint/eslint-plugin": "^4.28.0",
+        "@typescript-eslint/parser": "^4.28.0",
+        "eslint": "^7.29.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "prettier": "^2.3.1",
+        "ts-node": "^10.0.0",
+        "typescript": "^4.3.4"
+    }
 }
