--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q dist/server.js\"",
         "prestart": "npm run build",
         "start": "cross-env NODE_ENV=production node dist/server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "pushGit": "git checkout master && git merge dev && git push origin master && git checkout dev"
     },
     "repository": {
         "type": "git",
