--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "pg": "^8.6.0",
         "pg-hstore": "^2.3.4",
         "rimraf": "^3.0.2",
-        "sequelize": "^6.6.2"
+        "sequelize": "^6.6.2",
+        "typescript": "^4.3.5"
     },
     "devDependencies": {
         "@types/express": "^4.17.12",
@@ -45,7 +46,6 @@
         "eslint-plugin-prettier": "^3.4.0",
         "nodemon": "^2.0.12",
         "prettier": "^2.3.1",
-        "ts-node": "^10.0.0",
-        "typescript": "^4.3.4"
+        "ts-node": "^10.0.0"
     }
 }
