--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "pg-hstore": "^2.3.4",
         "rimraf": "^3.0.2",
         "sequelize": "^6.6.2",
+        "sequelize-cli-typescript": "^3.2.0-c",
         "typescript": "^4.3.5"
     },
     "devDependencies": {
