--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
         "cross-env": "^7.0.3",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "express-rate-limit": "^5.3.0",
         "helmet": "^4.6.0",
+        "hpp": "^0.2.3",
         "pg": "^8.6.0",
         "pg-hstore": "^2.3.4",
         "rimraf": "^3.0.2",
         "sequelize": "^6.6.2",
         "sequelize-cli-typescript": "^3.2.0-c",
-        "typescript": "^4.3.5"
+        "typescript": "^4.3.5",
+        "xss-clean": "^0.1.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
