--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "sequelize": "^6.6.2",
         "sequelize-cli-typescript": "^3.2.0-c",
         "typescript": "^4.3.5",
+        "uuid": "^8.3.2",
         "xss-clean": "^0.1.1"
     },
     "devDependencies": {
