--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
         "nodemon": "^2.0.12",
-        "prettier": "^2.3.1",
-        "ts-node": "^10.0.0"
+        "prettier": "^2.3.1"
     }
 }
