--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "express-rate-limit": "^5.3.0",
         "helmet": "^4.6.0",
         "hpp": "^0.2.3",
+        "jsonwebtoken": "^8.5.1",
         "pg": "^8.6.0",
         "pg-hstore": "^2.3.4",
         "rimraf": "^3.0.2",
