--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "eslint": "^7.29.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
+        "jest": "^28.1.0",
         "nodemon": "^2.0.12",
         "prettier": "^2.3.1"
     }
